# NLPDL-2025Fall

./: README.md  SUBMISSION_GUIDELINES.md  main.py  makefile  pyproject.toml  submit_hw.sh
hw0_hello_world/: README.md  make_submission.sh  pipeline.py  pyproject.toml  test_pipeline.py
hw1/: CHANGELOG.md  assignment1.md
hw1_bpe_and_lm/: README.md  assignment1.md  make_submission.sh  pyproject.toml
hw1_bpe_and_lm/basics/: __init__.py  templates.py
hw1_bpe_and_lm/tests/: test_tokenizer.py
hw2_huggingface/: .submission_ignore  README.md  dataHelper.py  eval.py  make_submission.sh  pyproject.toml  test_datahelper.py  test_eval.py  test_trainscript.py  train.py
hw3_posttrain/: README.md  pyproject.toml
hw3_posttrain/data/kissing_number/: evaluator.py  program.py
hw3_posttrain/src/: best_of_n.py  generate_report.py  grpo.py  grpo_train.py  kissing_helper.py  run_experiments.py  zero-shot.py
hw3_posttrain/tests/: conftest.py  test_grpo.py
