[project]
name = "nlpdl-2025fall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "adapters>=1.2.0",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "numpy==1.26.4",
    "peft>=0.17.1",
    "pyarrow==20.0.0",
    "pytest>=8.3.5",
    "scikit-learn>=1.7.2",
    "transformers>=4.51.3",
    "wandb>=0.21.3",
]
