[project]
name = "hw0-hello-world"
version = "0.1.0"
description = "NLPDL Homework 0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = false
python-preference = "managed"

[tool.pytest.ini_options]
addopts = "-q"



