[project]
name = "hw2-huggingface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "adapters>=1.2.0",
    "bert-score>=0.3.13",
    "datasets>=4.0.0",
    "decorator>=5.2.1",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "nltk>=3.9.1",
    "numpy<2.0.0",
    "peft>=0.17.1",
    "pyarrow<21.0.0",
    "pytest>=8.4.2",
    "rouge>=1.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.5.1,<2.6.0",
    "wandb>=0.22.0",
]

[project.optional-dependencies]
npu = ["torch-npu"]
